--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "Zoho": "https://www.zohoapis.com/crm/v5",
     "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
     "mip": "https://test.primecure.co.za/",
-    "code": "1000.10ea37d14efe67ddaad9481ee5bb996c.4df142c45e101bd85c451001fb8eb85d",
+    "code": "1000.71ee01eaeaa5a2b7c9347ec36ccc7db7.a922d360c64d66fb8b8823b3c00d3282",
     "timer": 60000,
     "OID": "0",
     "AVSCode": "0",
@@ -23,12 +23,12 @@
     "Child": "Child_dependent_cost",
     "MainType": "1",
     "AdultType": "2",
-    "SpouseType": "2",
+    "SpouseType": "3",
     "ChildType": "4",
     "EmploymentDate": "2020-01-01",
     "InceptionDaysRange": 100,
     "InceptionAlertDays": 5,
-    "InceptionAlertInterval": [15,25]
+    "InceptionAlertInterval": [ 15, 25 ]
   },
   "Logging": {
     "LogLevel": {
@@ -37,6 +37,8 @@
     }
   },
   "ConnectionStrings": {
-    "MIP": "Server=DESKTOP-KPTEQM2\\SQLEXPRESS;Database=MIP;Integrated Security=SSPI;"
+    // "MIP": "Server=LAPTOP-ORLKIGHN\\SQLEXPRESS;Database=MIP;Integrated Security=SSPI;"
+    "MIP": "Server=.; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+
   }
 }
