Commit Logical Check Policy Changes along with DB Scripts

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,12 +6,12 @@
     "client_id": "1000.PUOWT80A67ALL4US81QJFMUXZT3QUK",
     "client_secret": "7ee7c2d695b14efcd30cf24a9fb1fc6751ed8b6e16",
     "zoho_auth_client": "https://accounts.zoho.com/oauth/v2/token",
-    "zoho_base_client": "https://www.zohoapis.com/crm/v5/Deals/",
-    "Zoho": "https://www.zohoapis.com/crm/v5",
-    "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
+    "zoho_base_client": "https://sandbox.zohoapis.com/crm/v5/Deals/",
+    "Zoho": "https://sandbox.zohoapis.com/crm/v5",
+    "mip_base_client": "https://sandbox.zohoapis.com/crm/v5/MIP_Fields/",
     "mip": "https://test.primecure.co.za/",
-    "code": "1000.71ee01eaeaa5a2b7c9347ec36ccc7db7.a922d360c64d66fb8b8823b3c00d3282",
-    "timer": 60000,
+    "code": "1000.958a075208bb7ee636dbe94699cc988e.464daf03fb10f887ea3581894c4fd1df",
+    "timer": 600000,
     "OID": "0",
     "AVSCode": "0",
     "DOMandate": "1",
@@ -37,8 +37,7 @@
     }
   },
   "ConnectionStrings": {
-    // "MIP": "Server=LAPTOP-ORLKIGHN\\SQLEXPRESS;Database=MIP;Integrated Security=SSPI;"
-    "MIP": "Server=.; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+    "MIP": "Server=DESKTOP-KPTEQM2\\SQLEXPRESS;Database=MIP;Integrated Security=SSPI;"
 
   }
 }
