updated token access

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,17 @@
 {
   "AppSettings": {
-    "username": "u1VJsJ1QaoZ0dCuH6kTb",
-    "password": "Qfi92vk1shNViviqSeil",
+    "username": "I9Kr8Y0d6Bk3UYu2HKQx",
+    "password": "rn0630uIrBNMVGLwVxZ9",
     "owlurl": "https://kaelo.onowls.com/owls/external/external.php?method=dischem&server=Live",
     "client_id": "1000.PUOWT80A67ALL4US81QJFMUXZT3QUK",
     "client_secret": "7ee7c2d695b14efcd30cf24a9fb1fc6751ed8b6e16",
     "zoho_auth_client": "https://accounts.zoho.com/oauth/v2/token",
-    "zoho_base_client": "https://sandbox.zohoapis.com/crm/v5/Deals/",
-    "Zoho": "https://sandbox.zohoapis.com/crm/v5",
-    "mip_base_client": "https://sandbox.zohoapis.com/crm/v5/MIP_Fields/",
-    "mip": "https://test.primecure.co.za/",
-    "code": "1000.958a075208bb7ee636dbe94699cc988e.464daf03fb10f887ea3581894c4fd1df",
+    "zoho_base_client": "https://www.zohoapis.com/crm/v5/Deals/",
+    "Zoho": "https://www.zohoapis.com/crm/v5",
+    "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
+    "mip": "https://live.primecure.co.za/",
+    "environment": "eip_liv/rest/client_route/hrf/kaelo/zohomembership/request",
+    "code": "1000.4531017b105a1f8414a54547d206c7fe.ce04e0de42e0eb6c20fb552f2e0e49d0",
     "timer": 600000,
     "OID": "0",
     "AVSCode": "0",
@@ -28,7 +29,7 @@
     "EmploymentDate": "2020-01-01",
     "InceptionDaysRange": 100,
     "InceptionAlertDays": 5,
-    "InceptionAlertInterval": [ 15, 25 ]
+    "InceptionAlertInterval": [ 1, 15, 25, 31 ]
   },
   "Logging": {
     "LogLevel": {
@@ -37,7 +38,10 @@
     }
   },
   "ConnectionStrings": {
-    "MIP": "Server=DESKTOP-KPTEQM2\\SQLEXPRESS;Database=MIP;Integrated Security=SSPI;"
+   "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+   // "MIP": "Server=SCT-TRC-SQL01; Database=MIP; User Id=Logging; Password=LogScoutnet; Trusted_Connection=False; MultipleActiveResultSets=true"
+
+
 
   }
 }
