Update to MIP Service - Added in account holder ID number for 3rd party  account payer.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,31 +1,41 @@
 {
   "AppSettings": {
-    "username": "I9Kr8Y0d6Bk3UYu2HKQx",
-    "password": "rn0630uIrBNMVGLwVxZ9",
+   // "username": "u1VJsJ1QaoZ0dCuH6kTb",
+   // "password": "Qfi92vk1shNViviqSeil",
+    "username": "FfgkwuhdUTSgHDJKf8EK",
+    "password": "4Rqk4tXTTTnpx6758rYr",
     "owlurl": "https://kaelo.onowls.com/owls/external/external.php?method=dischem&server=Live",
     "client_id": "1000.PUOWT80A67ALL4US81QJFMUXZT3QUK",
     "client_secret": "7ee7c2d695b14efcd30cf24a9fb1fc6751ed8b6e16",
     "zoho_auth_client": "https://accounts.zoho.com/oauth/v2/token",
-    "zoho_base_client": "https://www.zohoapis.com/crm/v5/Deals/",
-    "Zoho": "https://www.zohoapis.com/crm/v5",
-    "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
-    "mip": "https://live.primecure.co.za/",
-    "environment": "eip_liv/rest/client_route/hrf/kaelo/zohomembership/request",
-    "code": "1000.4531017b105a1f8414a54547d206c7fe.ce04e0de42e0eb6c20fb552f2e0e49d0",
-    "timer": 600000,
+    "zoho_base_client": "https://sandbox.zohoapis.com/crm/v5/Deals/",
+    "Zoho": "https://sandbox.zohoapis.com/crm/v5",
+    "mip_base_client": "https://sandbox.zohoapis.com/crm/v5/MIP_Fields/",
+   // "mip": "https://test.primecure.co.za/",
+    //"environment": "eip_tst/rest/primecure_services/zoho/membership/request",
+    //"environment": "eip_tst/rest/client_route/hrf/kaelo/zohomembership/request",
+    "mip": "https://test.kaelo.co.za/",
+    "environment": "primecure_nrt/eip/rest/primecure_services/zoho/membership/request",
+    "compcode": "DRET3",
+    "code": "1000.cfff21ebfe17f29d80db12ef5ca339dc.a5337774a9a1f79e96cd764c09c20189",
+    "timer": 60000,
     "OID": "0",
     "AVSCode": "0",
     "DOMandate": "1",
     "PastYearAdmission": "Yes",
     "ProcessDTTM": "C",
-    "Main": "Main_Member",
+    "Main": "Main",
     "MainPrem": "Main_Member_cost",
     "Adult": "Adult_Dependent_Cost",
     "Child": "Child_dependent_cost",
-    "MainType": "1",
-    "AdultType": "2",
-    "SpouseType": "3",
-    "ChildType": "4",
+    // "MainType": "1",
+    //"AdultType": "2",
+    // "SpouseType": "3",
+    // "ChildType": "4",
+    "MainType": "M",
+    "AdultType": "A",
+    "SpouseType": "S",
+    "ChildType": "C",
     "EmploymentDate": "2020-01-01",
     "InceptionDaysRange": 100,
     "InceptionAlertDays": 5,
@@ -38,10 +48,120 @@
     }
   },
   "ConnectionStrings": {
-   "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
-   // "MIP": "Server=SCT-TRC-SQL01; Database=MIP; User Id=Logging; Password=LogScoutnet; Trusted_Connection=False; MultipleActiveResultSets=true"
+    "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+    // "MIP": "Server=SCT-TRC-SQL01; Database=MIP; User Id=Logging; Password=LogScoutnet; Trusted_Connection=False; MultipleActiveResultSets=true"
 
 
 
   }
 }
+/*{
+  "AppSettings": {
+    "username": "FfgkwuhdUTSgHDJKf8EK",
+    "password": "4Rqk4tXTTTnpx6758rYr",
+    "owlurl": "https://kaelo.onowls.com/owls/external/external.php?method=dischem&server=Live",
+    "client_id": "1000.PUOWT80A67ALL4US81QJFMUXZT3QUK",
+    "client_secret": "7ee7c2d695b14efcd30cf24a9fb1fc6751ed8b6e16",
+    "zoho_auth_client": "https://accounts.zoho.com/oauth/v2/token",
+    "zoho_base_client": "https://www.zohoapis.com/crm/v5/Deals/",
+    "Zoho": "https://www.zohoapis.com/crm/v5",
+    "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
+    "mip": "https://test.kaelo.co.za/",
+    "environment": "primecure_nrt/eip/rest/primecure_services/zoho/membership/request",
+    "compcode": "DRET3",
+    "code": "1000.7cf09b6b7aff25af7beeb42171938c1e.826db30c74fc5585d4c4165a3496ae01",
+    "timer": 60000,
+    "OID": 0,
+    "AVSCode": "0",
+    "DOMandate": "1",
+    "PastYearAdmission": "Yes",
+    "ProcessDTTM": "C",
+    "Main": "Main",
+    "MainPrem": "Main_Member_cost",
+    "Adult": "Adult_Dependent_Cost",
+    "Child": "Child_dependent_cost",
+    //"MainType": "1",
+    //"AdultType": "2",
+    //"SpouseType": "3",
+    // "ChildType": "4",
+    "MainType": "M",
+    "AdultType": "A",
+    "SpouseType": "S",
+    "ChildType": "C",
+    "EmploymentDate": "2020-01-01",
+    "InceptionDaysRange": 100,
+    "InceptionAlertDays": 5,
+    "InceptionAlertInterval": [ 1, 15, 25, 31 ],
+    "Instances": "MIPAPITok",
+    "Instances1": "MIPAPITok1",
+    "Instance2": "VICIAPITok1"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "ConnectionStrings": {
+    // "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+    "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true",
+    "Zoho_OAuth": "Server=.; Database=Zoho_OAuth; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+
+    // "MIP": "Server=SCT-TRC-DEV02; Database=MIP; User Id=Logging; Password=LogScoutnet; Trusted_Connection=False; MultipleActiveResultSets=true"
+
+  }
+}
+
+{
+  "AppSettings": {
+    "username": "I9Kr8Y0d6Bk3UYu2HKQx",
+    "password": "rn0630uIrBNMVGLwVxZ9",
+    "owlurl": "https://kaelo.onowls.com/owls/external/external.php?method=dischem&server=Live",
+    "client_id": "1000.PUOWT80A67ALL4US81QJFMUXZT3QUK",
+    "client_secret": "7ee7c2d695b14efcd30cf24a9fb1fc6751ed8b6e16",
+    "zoho_auth_client": "https://accounts.zoho.com/oauth/v2/token",
+    "zoho_base_client": "https://www.zohoapis.com/crm/v5/Deals/",
+    "Zoho": "https://www.zohoapis.com/crm/v5",
+    "mip_base_client": "https://www.zohoapis.com/crm/v5/MIP_Fields/",
+    "mip": "https://live.primecure.co.za/",
+    "environment": "eip_liv/rest/primecure_services/zoho/membership/request",
+    "compcode": "DRET3",
+    "code": "1000.532113588e3c44e0d157b366c6387c59.679d4094ea9b8d825f40ae60a172f628",
+    "timer": 60000,
+    "OID": "0",
+    "AVSCode": "0",
+    "DOMandate": "1",
+    "PastYearAdmission": "Yes",
+    "ProcessDTTM": "C",
+    "Main": "Main",
+    "MainPrem": "Main_Member_cost",
+    "Adult": "Adult_Dependent_Cost",
+    "Child": "Child_dependent_cost",
+    // "MainType": "1",
+    // "AdultType": "2",
+    //  "SpouseType": "3",
+    //  "ChildType": "4",
+    "MainType": "M",
+    "AdultType": "A",
+    "SpouseType": "S",
+    "ChildType": "C",
+    "EmploymentDate": "2020-01-01",
+    "InceptionDaysRange": 100,
+    "InceptionAlertDays": 5,
+    "InceptionAlertInterval": [ 1, 15, 25, 31 ]
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "ConnectionStrings": {
+     "MIP": "Server=LAPTOP-ORLKIGHN; Database=MIP; User Id=assessment; Password=Qwerty1234; Trusted_Connection=False; MultipleActiveResultSets=true"
+   // "MIP": "Server=TNT-PKL-SQL01; Database=MIP; User Id=Logging; Password=LogScoutnet; Trusted_Connection=False; MultipleActiveResultSets=true"
+
+
+
+  }
+}*/
+
